--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
    
   <servlet>
     <servlet-name>Hello</servlet-name>
-    <servlet-class>org.fulltest.FullTestServlet</servlet-class>
+    <servlet-class>org.fulltest.servlet.FullTestServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>Hello</servlet-name>
@@ -16,7 +16,7 @@
   
   <servlet>
   	<servlet-name>Login</servlet-name>
-  	<servlet-class>org.fulltest.LoginServlet</servlet-class>
+  	<servlet-class>org.fulltest.servlet.LoginServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>Login</servlet-name>
@@ -25,7 +25,7 @@
   
   <servlet>
     <servlet-name>Auth</servlet-name>
-    <servlet-class>org.fulltest.AuthServlet</servlet-class>
+    <servlet-class>org.fulltest.servlet.AuthServlet</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>Auth</servlet-name>
