--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
       <artifactId>jetty-server</artifactId>
       <version>${jettyVersion}</version>
     </dependency>
+    <dependency>
+        <groupId>org.apache.velocity</groupId>
+        <artifactId>velocity</artifactId>
+        <version>1.7</version>
+    </dependency>
   </dependencies>
  
   <build>
@@ -45,9 +50,15 @@
           <execution><goals><goal>java</goal></goals></execution>
         </executions>
         <configuration>
-          <mainClass>org.fulltest.FullTestServlet</mainClass>
+          <mainClass>org.fulltest.servlet.FullTestServlet</mainClass>
         </configuration>
       </plugin>
     </plugins>
+    
+    <resources>
+        <resource>
+            <directory>src/main/webapp</directory>
+        </resource>
+    </resources>
   </build>
 </project>
