--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
  
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.fulltest</groupId>
-  <artifactId>hello-world</artifactId>
+  <artifactId>full-test</artifactId>
   <version>0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Full Test</name>
@@ -24,6 +24,26 @@
         <artifactId>velocity</artifactId>
         <version>1.7</version>
     </dependency>
+	<dependency>
+   		<groupId>org.hibernate</groupId>
+   		<artifactId>hibernate-core</artifactId>
+   		<version>5.1.0.Final</version>
+	</dependency>
+	<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-entitymanager</artifactId>
+		<version>5.1.0.Final</version>
+	</dependency>
+	<dependency>
+		<groupId>postgresql</groupId>
+		<artifactId>postgresql</artifactId>
+		<version>9.1-901-1.jdbc4</version>
+	</dependency>
+	<dependency>
+    	<groupId>junit</groupId>
+    	<artifactId>junit</artifactId>
+    	<version>4.12</version>
+	</dependency>
   </dependencies>
  
   <build>
@@ -37,6 +57,7 @@
       <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
+         <version>3.5.1</version>
          <configuration>
            <source>1.8</source>
            <target>1.8</target>
