Add register page, persist Users

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,8 @@
         <resource>
             <directory>src/main/webapp</directory>
         </resource>
+        <resource>
+        	<directory>src/main/resources</directory></resource>
     </resources>
   </build>
 </project>
