--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,4 +32,12 @@
     <url-pattern>/auth/*</url-pattern>
   </servlet-mapping>
   
+  <servlet>
+    <servlet-name>Register</servlet-name>
+    <servlet-class>org.fulltest.servlet.RegisterServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Register</servlet-name>
+    <url-pattern>/register/*</url-pattern>
+  </servlet-mapping>
 </web-app>
