--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,15 @@
   </servlet-mapping>
   
   <servlet>
+  	<servlet-name>Logout</servlet-name>
+  	<servlet-class>org.fulltest.servlet.LoginServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>Logout</servlet-name>
+  	<url-pattern>/logout/*</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
     <servlet-name>Auth</servlet-name>
     <servlet-class>org.fulltest.servlet.AuthServlet</servlet-class>
   </servlet>
