--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,16 @@
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
    version="2.5">
-   
+  
+  <servlet>
+  	<servlet-name>Index</servlet-name>
+  	<servlet-class>org.fulltest.servlet.LoginServlet</servlet-class>
+  </servlet> 
+  <servlet-mapping>
+  	<servlet-name>Index</servlet-name>
+  	<url-pattern>/</url-pattern>
+  </servlet-mapping>
+  
   <servlet>
     <servlet-name>Hello</servlet-name>
     <servlet-class>org.fulltest.servlet.FullTestServlet</servlet-class>
